ctrl + alt + l, fixed return statement in JsonToolsController, optimized imports in JsonTransformRemoveAttributesTest