@@ -4,6 +4,8 @@ import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -11,7 +13,7 @@ class JsonTransformRetainAttributesTest {
     @Test
     public void testEmptyAttributes() {
         String json = "{\"remove\":\"data\",\"numeric\":5,\"array\":[\"garlic\",\"olive oil\",\"pepper\",\"salt\"],\"retain\":\"I'm alive\"}";
-        JsonTransformRetainAttributes transform = new JsonTransformRetainAttributes(new JsonBase(json),Arrays.asList());
+        JsonTransformRetainAttributes transform = new JsonTransformRetainAttributes(new JsonBase(json), Collections.emptyList());
 
         String excepted = "{}";
         assertEquals(excepted, transform.execute());
@@ -20,16 +22,16 @@ class JsonTransformRetainAttributesTest {
     @Test
     public void testEmptyData() {
         String json = "{}";
-        JsonTransformRetainAttributes transform = new JsonTransformRetainAttributes(new JsonBase(json),Arrays.asList("wolves", "amidst"));
+        JsonTransformRetainAttributes transform = new JsonTransformRetainAttributes(new JsonBase(json), Arrays.asList("wolves", "amidst"));
 
         String excepted = "{}";
         assertEquals(excepted, transform.execute());
     }
 
     @Test
-    public void testRetainAttributes1(){
+    public void testRetainAttributes1() {
         String json = "{\"remove\":\"data\",\"numeric\":5,\"array\":[\"garlic\",\"olive oil\",\"pepper\",\"salt\"],\"retain\":\"I'm alive\"}";
-        JsonTransformRetainAttributes transform = new JsonTransformRetainAttributes(new JsonBase(json),Arrays.asList("retain", "numeric"));
+        JsonTransformRetainAttributes transform = new JsonTransformRetainAttributes(new JsonBase(json), Arrays.asList("retain", "numeric"));
 
         String excepted = "{\"numeric\":5,\"retain\":\"I'm alive\"}";
         assertEquals(excepted, transform.execute());
@@ -38,15 +40,16 @@ class JsonTransformRetainAttributesTest {
     @Test
     public void testRetainAttributes2() {
         String json = "{\"remove\":\"data\",\"numeric\":5,\"array\":[\"garlic\",\"olive oil\",\"pepper\",\"salt\"],\"retain\":\"I'm alive\"}";
-        JsonTransformRetainAttributes transform = new JsonTransformRetainAttributes(new JsonBase(json),Arrays.asList("array", "remove"));
+        JsonTransformRetainAttributes transform = new JsonTransformRetainAttributes(new JsonBase(json), Arrays.asList("array", "remove"));
 
         String excepted = "{\"remove\":\"data\",\"array\":[\"garlic\",\"olive oil\",\"pepper\",\"salt\"]}";
         assertEquals(excepted, transform.execute());
     }
+
     @Test
     public void testRetainAttributes3() {
         String json = "{\"remove\":\"data\",\"numeric\":5, \"obj\":{\"a1\":\"haahk\",\"a2\":\"hah\"}}";
-        JsonTransformRetainAttributes transform = new JsonTransformRetainAttributes(new JsonBase(json),Arrays.asList("obj"));
+        JsonTransformRetainAttributes transform = new JsonTransformRetainAttributes(new JsonBase(json), List.of("obj"));
 
         String excepted = "{\"obj\":{\"a1\":\"haahk\",\"a2\":\"hah\"}}";
         assertEquals(excepted, transform.execute());
